# Darius-Akhbari-MLOps

./: Dockerfile  Makefile  app.py  pyproject.toml  streamlit-deployment.yaml
