[tool.poetry]
name = "darius-akhbari-mlops"
version = "0.1.0"
description = ""
authors = ["lapin2048 <lapin2048@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.9"
streamlit = "^1.21.0"
typing-extensions = "^4.3.0"
blinker = ">=1.0.0"
click = ">=7.0"
importlib-metadata = ">=1.4"
packaging = ">=14.1"
pillow = ">=6.2"
protobuf = ">=3.12"
python-dateutil = "*"
requests = ">=2.4"
prometheus_client = "0.11.0"

[tool.poetry.dev-dependencies] # Develop dependencies
coverage = "~7" # Allow to know the part of code covered
black = "~23" # Code formatting
isort = "~5" # Import sort
mypy = "~1" # Type checking
pytest = "~7" # For unit tests
vulture = "~2" # Check dead code
git-cliff = "~1" # Git commit formatting

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
